tests/snapshots/run_wpt_conformance__coreml_reduceProduct_float32_4D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_product.https.any.js",
    "reduceProduct float32 4D tensor options.axes",
    "coreml",
    "PASS",
)
