tests/snapshots/run_wpt_conformance__coreml_reduceSumSquare_float16_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float16 1D constant tensor all positive default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([147, 61, 212, 60, 188, 60, 4, 54, 147, 57, 5, 58, 70, 60, 210, 61, 8, 59, 225, 50, 102, 58, 90, 48, 102, 60, 55, 58, 105, 60, 64, 57, 208, 62, 105, 62, 19, 62, 146, 63, 186, 58, 235, 60, 30, 62, 39, 57]);
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
